--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Octave Streaming - Stream Your Favorite Tunes",
-  "short_name": "Octave",
+  "name": "SamJ Music - Stream Your Favorite Tunes",
+  "short_name": "SamJ Music",
   "description": "Your ultimate music streaming companion",
   "start_url": "/",
   "scope": "/",
